--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
           <a class="logo-word" href="./index.html"
             >Web<span class="logo">Studio</span></a
           >
+          <div class="menu-list">
+            <svg height="24" width="24">
+              <use href="./images/icons.svg#icon-heroicons"></use>
+            </svg>
+          </div>
           <ul class="navigation-list">
             <li class="list-navigation">
               <a class="nav-information nav-information-two" href="./index.html"
@@ -34,10 +39,14 @@
               >
             </li>
             <li class="list-navigation">
-              <a class="nav-information" href="">Portfolio</a>
+              <a class="nav-information nav-information-three" href=""
+                >Portfolio</a
+              >
             </li>
             <li class="list-navigation">
-              <a class="nav-information" href="">Contacts</a>
+              <a class="nav-information nav-information-three" href=""
+                >Contacts</a
+              >
             </li>
           </ul>
         </nav>
@@ -128,6 +137,7 @@
           <ul class="list-our-team">
             <li class="our-name">
               <img
+                class="photo-our-team"
                 src="./images/MarkGuerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -172,7 +182,12 @@
               </div>
             </li>
             <li class="our-name">
-              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
+              <img
+                class="photo-our-team"
+                src="./images/TomFord.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="list-name-team">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="our-profession">Frontend Developer</p>
@@ -214,6 +229,7 @@
             </li>
             <li class="our-name">
               <img
+                class="photo-our-team"
                 src="./images/CamilaGarcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -259,6 +275,7 @@
             </li>
             <li class="our-name">
               <img
+                class="photo-our-team"
                 src="./images/DanielWilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -422,7 +439,7 @@
           >
           <p class="page-information">
             Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions..
+            digital marketing & growth solutions.
           </p>
         </div>
         <div>
@@ -577,6 +594,86 @@
           </div>
           <button class="button-form-end" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+    <div class="modal-container-menu is-open">
+      <div class="modal-menu">
+        <button class="modal-button-menu" type="button">
+          <svg class="svg-modal-menu" height="8" width="8">
+            <use href="./images/icons.svg#icon-closeblack18dp21"></use>
+          </svg>
+        </button>
+        <nav class="navigation">
+          <ul class="list-modal-menu">
+            <li class="list-navigation">
+              <a
+                class="nav-information nav-information-menu"
+                href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="list-navigation">
+              <a class="nav-information nav-information-menu" href=""
+                >Portfolio</a
+              >
+            </li>
+            <li class="list-navigation">
+              <a class="nav-information nav-information-menu" href=""
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <address class="teg-adress">
+          <ul class="adress-modal-menu">
+            <li>
+              <a class="adress-information-menu" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a
+                class="adress-information-menu"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="icon-title-menu">
+          <li class="icon-team-name">
+            <a
+              class="icon-team-link"
+              href="https://www.instagram.com/risenteisha/"
+              target="_blank"
+            >
+              <svg class="team-icon-links" height="16" width="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-team-name">
+            <a class="icon-team-link" href="" target="_blank">
+              <svg class="team-icon-links" height="16" width="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-team-name">
+            <a class="icon-team-link" href="" target="_blank">
+              <svg class="team-icon-links" height="16" width="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-team-name">
+            <a class="icon-team-link" href="" target="_blank">
+              <svg class="team-icon-links" height="16" width="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
