--- a/index.html
+++ b/index.html
@@ -333,12 +333,25 @@
           <ul class="list-portfolio">
             <li class="list-programs">
               <div class="image-container">
-                <img
-                  srcset="./images/Banking.jpg 1x, ./images/img4.jpg 2x"
-                  src="./images/Banking.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/mobile-adaptive/bankingapp2x.jpg 2x"
+                    media="(min-width: 767px)"
+                  />
+                  <source
+                    srcset="./images/tablet adaptive/banking2x.jpg 2x"
+                    media="(min-with: 768px)"
+                  />
+                  <source
+                    srcset="./images/dekstop adaptive/banking2x.jpg 2x"
+                    media="(min-with: 1158px)"
+                  />
+                  <img
+                    src="./images/Banking.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="text-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -352,12 +365,25 @@
             </li>
             <li class="list-programs">
               <div class="image-container">
-                <img
-                  srcset="./images/Cashless.jpg 1x, ./images/img5.jpg 1x"
-                  src="./images/Cashless.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/mobile-adaptive/playment2x.jpg 2x"
+                    media="(min-width: 767px)"
+                  />
+                  <source
+                    srcset="./images/tablet adaptive/payment2x.jpg 2x"
+                    media="(min-with: 768px)"
+                  />
+                  <source
+                    srcset="./images/dekstop adaptive/payment2x.jpg 2x"
+                    media="(min-with: 1158px)"
+                  />
+                  <img
+                    src="./images/Cashless.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                </picture>
                 <p class="text-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -371,12 +397,25 @@
             </li>
             <li class="list-programs">
               <div class="image-container">
-                <img
-                  srcset="./images/Meditation.jpg 1x, ./images/img6.jpg 2x"
-                  src="./images/Meditation.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/mobile-adaptive/meditation2x.jpg 2x"
+                    media="(min-width: 767px)"
+                  />
+                  <source
+                    srcset="./images/tablet adaptive/meditation2x.jpg 2x"
+                    media="(min-with: 768px)"
+                  />
+                  <source
+                    srcset="./images/dekstop adaptive/meditation2x.jpg 2x"
+                    media="(min-with: 1158px)"
+                  />
+                  <img
+                    src="./images/Meditation.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                </picture>
                 <p class="text-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -390,12 +429,21 @@
             </li>
             <li class="list-programs">
               <div class="image-container">
-                <img
-                  srcset="./images/Taxi.jpg 1x, ./images/img7.jpg 1x"
-                  src="./images/Taxi.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/mobile-adaptive/taxi2x.jpg 2x"
+                    media="(min-width: 767px)"
+                  />
+                  <source
+                    srcset="./images/tablet adaptive/taxi2x.jpg 2x"
+                    media="(min-with: 768px)"
+                  />
+                  <source
+                    srcset="./images/dekstop adaptive/taxi2x.jpg 2x"
+                    media="(min-with: 1158px)"
+                  />
+                  <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" />
+                </picture>
                 <p class="text-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -409,12 +457,25 @@
             </li>
             <li class="list-programs">
               <div class="image-container">
-                <img
-                  srcset="./images/Screen.jpg 1x, ./images/img8.jpg 2x"
-                  src="./images/Screen.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/mobile-adaptive/screen2x.jpg 2x"
+                    media="(min-width: 767px)"
+                  />
+                  <source
+                    srcset="./images/tablet adaptive/screen2x.jpg 2x"
+                    media="(min-with: 768px)"
+                  />
+                  <source
+                    srcset="./images/dekstop adaptive/screen2x.jpg 2x"
+                    media="(min-with: 1158px)"
+                  />
+                  <img
+                    src="./images/Screen.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                </picture>
                 <p class="text-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -428,12 +489,25 @@
             </li>
             <li class="list-programs">
               <div class="image-container">
-                <img
-                  srcset="./images/Online.jpg 1x, ./images/img9.jpg 2x"
-                  src="./images/Online.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/mobile-adaptive/sourses2x.jpg 2x"
+                    media="(min-width: 767px)"
+                  />
+                  <source
+                    srcset="./images/tablet adaptive/sources2x.jpg 2x"
+                    media="(min-with: 768px)"
+                  />
+                  <source
+                    srcset="./images/dekstop adaptive/sources2x.jpg 2x"
+                    media="(min-with: 1158px)"
+                  />
+                  <img
+                    src="./images/Online.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                </picture>
                 <p class="text-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
