--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <ul class="adress-information-title">
             <li>
               <a class="adress-information" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                >info@dewstudio.com</a
               >
             </li>
             <li>
